ome页UI改版第一版完成

--- a/client/pages/home/home.wxss
+++ b/client/pages/home/home.wxss
@@ -16,7 +16,7 @@
 }
 
 .color-orange {
-  color: #f47983;
+  color: #576b95;
 }
 
 
@@ -24,7 +24,7 @@
 .res-head {
   padding: 0 32rpx;
   height: 200rpx;
-  background: #f47983;/*欢迎*/
+  background: #576b95;/*欢迎*/
   position: relative;
 }
 
@@ -86,7 +86,7 @@
 .body-head .cur::after {
   width: 100%;
   height: 2rpx;
-  background: #f47983;
+  background: #576b95;
   display: block;
   content: "";
 }
@@ -119,7 +119,7 @@ swiper {
   width: 600rpx;
   box-sizing: border-box;
   display: inline-block;
-  padding: 20rpx 20rpx;
+  padding: 0 20rpx 0 20rpx;
 }
 
 
@@ -145,15 +145,22 @@ swiper {
   height: 50rpx;
   line-height: 50rpx;
   font-size: 25rpx;
+  position: relative;
 }
 
 .items-head .color-orange {
+  position: absolute;
+  top:0;
   font-size: 20rpx;
+ 
 }
+.items-head .orange-text{
+margin-left: 8rpx;
 
+}
 .items-wrapper {
   height: 200rpx;
-  background: #f2f2f2;/*后期建议是白色*/
+  /*background: #f2f2f2;/*后期建议是白色*/
   position: relative;
 }
 .items-left image {/*不居中是为了图片上方和折扣上方对齐*/
@@ -168,6 +175,7 @@ swiper {
   vertical-align: top;
   margin-left: 20rpx;
   line-height: 45rpx;
+  position: relative;
 }
 
 .items-message .message-title {
@@ -187,7 +195,7 @@ swiper {
 }
 
 .message-price .price-sale {
-  color: #f47983;
+  color: #576b95;
   font-size: 35rpx;/*40*/
 }
 
@@ -200,9 +208,12 @@ swiper {
 
 .items-left .message-discount {
   /* border: 1px solid #e83e00; 我认为不需要折扣换算，有原价现价就行*/
-  font-size: 25rpx;
-  padding: 0 5rpx;
-  color: #f47983;
+  font-size: 33rpx;
+  color: #576b95;
+  position: absolute;
+   top: 22rpx;
+   right: -57rpx;
+
 }
 
 .items-right {
@@ -223,8 +234,9 @@ swiper {
 /* 底部支付样式 */
 
 .body-pay {
-  background:#f47983;/*待#db5a6b定*/
+  background:#576b95;/*待#db5a6b定*/
   position: absolute;
+   z-index: 1;
   bottom: 0;
   right: 0;
   left: 0;
@@ -234,20 +246,30 @@ swiper {
 
 .body-pay image {
   display: inline-block;
-  width: 81rpx;
-  height: 81rpx;
-  margin-top:10rpx;
-  margin-left:37rpx;
+  width: 100rpx;
+  height: 100rpx;
+  margin-left:21rpx;
+  margin-top: -33rpx;
+  border: 8rpx solid rgba(51,51,51,0.5);  
+  border-radius: 50%;
+  background-color: #576b95;
+ 
 }
 .body-pay .pay-all {
-  margin-left: 55rpx; 
+  margin-left:37rpx; 
   position: absolute;
   top: 50%;
   margin-top: -20rpx;
 }
 .body-pay .pay-pay{
+  display: inline-block;
+  height: 100rpx;
+  width: 200rpx;
   position: absolute;
-  right: 25rpx;
-  top: 50%;
-  margin-top: -20rpx;
+  right: 0rpx;
+  line-height: 100rpx;
+  text-align: center;
+  /* top: 50%;  */
+ 
+  background-color: #304161;
 }
