--- a/client/pages/home/home.wxml
+++ b/client/pages/home/home.wxml
@@ -18,63 +18,126 @@
       <text class="cur">点菜</text>
       <text>商家</text>
     </view>
-    <swiper 
-      indicator-dots="{{false}}"
-      autoplay="{{false}}"
-      bindchange="changeSwipe"
-      current="{{swipeIndex}}"
-    >
-        <swiper-item>
-          <view class="body-order">
-            <scroll-view class="body-category" scroll-Y="{{true}}" style="height:740rpx;">
-              <view class="category-items">
-                <text class="cur">热销</text>
-                <view class="dash-split" />
-                <text>折扣</text>
-                <view class="dash-split" />
-                <text>热菜</text>
-                <view class="dash-split" />
-                <text>凉菜</text>
-                <view class="dash-split" />
-                <text>水和主食</text>
-                <view class="dash-split" />
-              </view>
-            </scroll-view>
-            <scroll-view class="body-items" style="height:740rpx;" scroll-Y="{{true}}">
-              <view class="items-head">
-                <text class="color-orange">|</text>
-                <text> 热销</text>
-              </view>
-              <view class="items-wrapper">
-                <view class="items-left">
-                  <image src="./chicken.jpg" />
-                  <view class="items-message">
-                    <text class="message-title">溜肉段</text>
-                    <text class="message-description">好吃</text>
-                    <text class="message-price">
+    <swiper indicator-dots="{{false}}" autoplay="{{false}}" bindchange="changeSwipe" current="{{swipeIndex}}">
+      <swiper-item>
+        <view class="body-order">
+          <scroll-view class="body-category" scroll-Y="{{true}}" style="height:740rpx;">
+            <view class="category-items">
+              <text class="cur">热销</text>
+              <view class="dash-split" />
+              <text>折扣</text>
+              <view class="dash-split" />
+              <text>热菜</text>
+              <view class="dash-split" />
+              <text>凉菜</text>
+              <view class="dash-split" />
+              <text>水和主食</text>
+              <view class="dash-split" />
+            </view>
+          </scroll-view>
+          <scroll-view class="body-items" style="height:740rpx;" scroll-Y="{{true}}">
+            <view class="items-head">
+              <text class="color-orange">|</text>
+              <text class="orange-text"> 热销</text>
+            </view>
+            <view class="items-wrapper">
+              <view class="items-left">
+                <image src="./chicken.jpg" />
+                <view class="items-message">
+                  <text class="message-title">溜肉段</text>
+                  <text class="message-description">好吃</text>
+                  <text class="message-price">
                       <text class="price-sale">¥100</text>
-                      <text class="price-origin">¥20</text>
-                    </text>
-                    <!-- 折扣冗余：<text class="message-discount">2.5折</text> -->
-                  </view>
-                </view>
-                <view class="items-right">
-                  <image src="./plus.png" />
+                  <text class="price-origin">¥20</text>
+                  </text>
+                  <!-- <text class="message-discount">2.5折</text> -->
                 </view>
               </view>
-            </scroll-view>
-          </view>
-          <view class="body-pay">
-            <image class="pay-cart" src="./cart.png" />
-            <text class="pay-all">¥200</text>
-            <text class="pay-pay">结算</text>
-          </view>
-        </swiper-item>
-        <swiper-item>
-          <view class="body-details">
-            hello餐厅成立于1998年2月份
-          </view>
-        </swiper-item>
+              <view class="items-right">
+                <image src="./plus.png" />
+              </view>
+            </view>
+            <view class="items-wrapper">
+              <view class="items-left">
+                <image src="./chicken.jpg" />
+                <view class="items-message">
+                  <text class="message-title">溜肉段</text>
+                  <text class="message-description">好吃</text>
+                  <text class="message-price">
+                      <text class="price-sale">¥100</text>
+                  <text class="price-origin">¥20</text>
+                  </text>
+                  <!-- <text class="message-discount">2.5折</text> -->
+                </view>
+              </view>
+              <view class="items-right">
+                <image src="./plus.png" />
+              </view>
+            </view>
+            <view class="items-wrapper">
+              <view class="items-left">
+                <image src="./chicken.jpg" />
+                <view class="items-message">
+                  <text class="message-title">溜肉段</text>
+                  <text class="message-description">好吃</text>
+                  <text class="message-price">
+                      <text class="price-sale">¥100</text>
+                  <text class="price-origin">¥20</text>
+                  </text>
+                  <!-- <text class="message-discount">2.5折</text> -->
+                </view>
+              </view>
+              <view class="items-right">
+                <image src="./plus.png" />
+              </view>
+            </view>
+            <view class="items-wrapper">
+              <view class="items-left">
+                <image src="./chicken.jpg" />
+                <view class="items-message">
+                  <text class="message-title">溜肉段</text>
+                  <text class="message-description">好吃</text>
+                  <text class="message-price">
+                      <text class="price-sale">¥100</text>
+                  <text class="price-origin">¥20</text>
+                  </text>
+                  <!-- <text class="message-discount">2.5折</text> -->
+                </view>
+              </view>
+              <view class="items-right">
+                <image src="./plus.png" />
+              </view>
+            </view>
+            <view class="items-wrapper">
+              <view class="items-left">
+                <image src="./chicken.jpg" />
+                <view class="items-message">
+                  <text class="message-title">溜肉段</text>
+                  <text class="message-description">好吃</text>
+                  <text class="message-price">
+                      <text class="price-sale">¥100</text>
+                  <text class="price-origin">¥20</text>
+                  </text>
+                  <!-- <text class="message-discount">2.5折</text> -->
+                </view>
+              </view>
+              <view class="items-right">
+                <image src="./plus.png" />
+              </view>
+            </view>
+          </scroll-view>
+        </view>
+        <view class="body-pay">
+          <image class="pay-cart" src="./cart.png" />
+          <text class="pay-all">¥200</text>
+          <text class="pay-pay">结算</text>
+        </view>
+      </swiper-item>
+      <swiper-item>
+        <view class="body-details">
+          hello餐厅成立于1998年2月份
+        </view>
+      </swiper-item>
     </swiper>
 
   </view>
