--- a/client/pages/my/my.wxml
+++ b/client/pages/my/my.wxml
@@ -5,14 +5,16 @@
       class="userinfo-avatar" 
       src="{{logged ? userInfo.avatarUrl : './user-unlogin.png'}}"
       background-size="cover" />
-    <text class="userinfo-nickname">{{nickName}}</text>
+    <button class="userinfo-login" wx:if="{{!logged}}" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo">点击登录</button>
+    <text class="userinfo-nickname" wx:else>{{userInfo.nickName}}</text>
+
   </view>
     <view class="list">
-      <view class="usermotto" data-type='lists'>
+      <view class="usermotto" data-type='lists' wx:if="{{logged}}">
          <text class="user-motto">订单列表</text>
          <text>></text>
       </view>
-      <view class="usermotto" data-type='article'>
+      <view class="usermotto" data-type='article' bindtap='toAboutMyPage'>
          <text class="user-motto">关于我们</text>
          <text>></text>
       </view>
